# seedpipe

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  agent.markdown  agents-readme.markdown  agents.markdown  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: tests.yml
docs/: agentic_command_policy.md  agentic_engineering_v2_playbook.md  phase3_agent_control_plane.md  versioning.md
docs/features/: FEATURE_INDEX.md
docs/spec/phase1/: verify.md
docs/spec/phase1/contracts/: items_row.schema.json  manifest.schema.json
docs/specs/: current_system_spec.md  future_match_masra.md  future_system_spec.md  python_improvements_by_version.md
docs/specs/evals/: sample_src_test_gap_review_20260303.md
docs/specs/future_match_masra/: README.md  pipeline_a_analysis_ticketing.yaml  pipeline_b_coding_execution.yaml  pipeline_c_qa_ticket_closure.yaml  pipeline_d_progress_analysis.yaml
docs/specs/phase1/: human_required_stage_contract.md  invariants.md
docs/specs/phase1/contracts/: function_metadata_contract.json  function_metric_status.schema.json  metrics_contract.schema.json  (+2 more)
docs/specs/phase4/: stripe_cost_metrics_integration_plan.md
sample/: Dockerfile  README.md  agents-readme.markdown  agents.markdown  docker-compose.yml
sample/spec/phase1/: pipeline.yaml
sample/src/stages/: __init__.py  draft_translation.py  ingest_source.py  publish.py  qa_finalize.py  qa_pass.py
seedpipe/: __init__.py
seedpipe/runtime/: __init__.py  ctx.py  items.py  metrics.py  state.py
seedpipe/spec/phase1/: verify.md
seedpipe/tools/: __init__.py  contracts.py  diff.py  io.py  runner.py  types.py  verify.py
spec/contracts/: inbox_bundle.schema.json  outbox_bundle.schema.json
spec/pattern_a/: seedpipe_plugin_packaging.md
spec/phase1/: human_required_stage_contract.md  invariants.md  pipeline.yaml  pipeline_schema_minimal.md
spec/phase1/contracts/: artifact_ref.schema.json  function_metric_governance.schema.json  function_metric_row.schema.json  function_metric_status.schema.json  items_row.schema.json
tests/: test_compile.py  test_ctx.py  test_run.py  test_runtime_ctx.py  test_runtime_metrics.py  test_sample_integration.py  test_scaffold.py  test_tools_contracts.py  test_tools_diff.py  test_watch.py
tools/: __init__.py  agent_loop.py  compile.py  compile_flow_templates.py  run.py  scaffold.py  verify.py  watch.py
(+21 files in other folders)
