[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedpipe"
version = "0.2.0"
description = "Seedpipe compiler and generated pipeline runtime helpers with function metrics support (FR-006..FR-010)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
seedpipe-compile = "tools.compile:main"
seedpipe-scaffold = "tools.scaffold:main"
seedpipe-run = "tools.run:main"
seedpipe-watch = "tools.watch:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["seedpipe*", "tools*"]
