[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedpipe"
version = "0.2.22"
description = "Seedpipe compiler and generated pipeline runtime helpers with function metrics support (FR-006..FR-010)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
seedpipe-compile = "tools.compile:main"
seedpipe-scaffold = "tools.scaffold:main"
seedpipe-run = "tools.run:main"
seedpipe-watch = "tools.watch:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["seedpipe*", "tools*"]

[tool.mypy]
python_version = "3.11"
files = ["seedpipe", "tools"]
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
